[package]
name = "sexpr_parser"
version = "0.1.1"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mbillingr/sexpr_parser"
description = "Generic S-Expression parser"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
